Wed Feb 10 14:06:59 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          SharedDomainParticipant tests should work again.

        * connectors/dds4ccm/impl/ndds/DomainParticipant.h:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
          Made DomainParticipant proxy class refcounted. Prevented
          deleting the DomainParticipant proxy when still in use.

        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component_exec.cpp:
        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
          Optimized logging.

Wed Feb 10 10:26:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.h:
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.h:
          Removed generated headers

Wed Feb 10 10:03:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.h:
        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
          Implemented thread switch for DataReaderStateListener.

        * connectors/dds4ccm/tests/SLOneByOne/Base/SL_OneByOne_Base.idl:
          Layout changes.

Wed Feb 10 09:36:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:
          Extended native example

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.mpc:
          Added the exec export flags to get svn head to compile

        * connectors/dds4ccm/examples/Hello/Base/Hello_Base.idl:
          Added another pragma

Wed Feb 10 08:12:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderHandler_T.h: