@@ -1,3 +1,12 @@
+Wed Feb 10 14:23:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.cpp:
+          Checking whether a connection to the reader is in place before read.
+
+        * connectors/dds4ccm/tests/Reader/Sender/Reader_Test_Sender_exec.cpp:
+          Wait a while before informing the receiver that the samples
+          were written.
+
 Wed Feb 10 14:06:59 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * bin/ciao_tests.lst:
